; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_hb_dict.c_hb_value_get_string_xform.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_hb_dict.c_hb_value_get_string_xform.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HB_VALUE_TYPE_NULL = common dso_local global i64 0, align 8
@HB_VALUE_TYPE_STRING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @hb_value_get_string_xform(i32* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i64 @hb_value_type(i32* %6)
  %8 = load i64, i64* @HB_VALUE_TYPE_NULL, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %27

11:                                               ; preds = %1
  %12 = load i32*, i32** %3, align 8
  %13 = load i32, i32* @HB_VALUE_TYPE_STRING, align 4
  %14 = call i32* @hb_value_xform(i32* %12, i32 %13)
  store i32* %14, i32** %5, align 8
  %15 = load i32*, i32** %5, align 8
  %16 = call i64 @hb_value_type(i32* %15)
  %17 = load i64, i64* @HB_VALUE_TYPE_NULL, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %11
  store i8* null, i8** %2, align 8
  br label %27

20:                                               ; preds = %11
  %21 = load i32*, i32** %5, align 8
  %22 = call i32 @json_string_value(i32* %21)
  %23 = call i8* @strdup(i32 %22)
  store i8* %23, i8** %4, align 8
  %24 = load i32*, i32** %5, align 8
  %25 = call i32 @json_decref(i32* %24)
  %26 = load i8*, i8** %4, align 8
  store i8* %26, i8** %2, align 8
  br label %27

27:                                               ; preds = %20, %19, %10
  %28 = load i8*, i8** %2, align 8
  ret i8* %28
}

declare dso_local i64 @hb_value_type(i32*) #1

declare dso_local i32* @hb_value_xform(i32*, i32) #1

declare dso_local i8* @strdup(i32) #1

declare dso_local i32 @json_string_value(i32*) #1

declare dso_local i32 @json_decref(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
